@@ -12,6 +12,7 @@ ver 0.21 (not yet released)
 * database
   - simple: scan audio formats
   - proxy: require libmpdclient 2.9
+  - proxy: forward `sort` and `window` to server
 * player
   - "one-shot" single mode
 * input
